--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.8",
     "next": "15.1.7",
     "react": "^19.0.0",
